--- a/Maths-AsciiDonut/Maths-AsciiDonut/Maths-AsciiDonut.vcxproj.filters
+++ b/Maths-AsciiDonut/Maths-AsciiDonut/Maths-AsciiDonut.vcxproj.filters
@@ -51,4 +51,7 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="test.txt" />
+  </ItemGroup>
 </Project>
